--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="tab_text_1">Pokemon</string>
     <string name="tab_text_2">Favoritos</string>
     <string name="tab_text_3">Bayas</string>
+    <string name="crash_button">CRASH APP</string>
 </resources>
