--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,4 @@
 <resources>
     <string name="app_name">Pokedex</string>
-    <string name="tab_text_1">Pokemon</string>
-    <string name="tab_text_2">Favoritos</string>
-    <string name="tab_text_3">Bayas</string>
-    <string name="crash_button">CRASH APP</string>
+    <string name="main_crash">Button crash has been pressed</string>
 </resources>
